# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
page_loader/: __init__.py  page_loader.py
tests/: test_page_loader.py
