[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Aleksandr Efimovskiy <bdf715@gmail.com>"]
packages = [
  { include = "page_loader" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
]
repository = "https://github.com/bdf715/python-project-lvl3"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
requests-mock = "^1.9.3"
beautifulsoup4 = "^4.11.1"
progress = "^1.6"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page_loader = "page_loader.scripts.page_loader:main"
